--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,12 @@
       name="description"
       content="מפת שימוש שבילי האופניים בתל אביב-יפו"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&family=Rubik:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
